--- a/FindMe.Web.Bo/Properties/launchSettings.json
+++ b/FindMe.Web.Bo/Properties/launchSettings.json
@@ -12,6 +12,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
+        "Migration__On": "false",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
