--- a/FindMe.Web.Bo/appsettings.json
+++ b/FindMe.Web.Bo/appsettings.json
@@ -1,4 +1,11 @@
 ﻿{
+  "ConnectionStrings": {
+    "MsSqlConnection": "Server=DAMIENPC;Database=FindMe.Db; persist security info=True;user id=sa;password=zx;MultipleActiveResultSets=True;App=NoteFlowApp",
+    "MsSqlConnectionRL": "",
+    "MySqlConnection": "Server=localhost;Database=FindMe.Db;Uid=root;Pwd=badam",
+    "MySqlConnectionRL": ""
+  },
+
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
