Done: Logging SingIn View Validation

--- a/FindMe.Web.Bo/appsettings.json
+++ b/FindMe.Web.Bo/appsettings.json
@@ -6,6 +6,8 @@
     "MySqlConnectionRL": ""
   },
 
+  "Languages": "en-us,en-gb,fr-fr",
+
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
