--- a/FindMe.Web.Bo/project.json
+++ b/FindMe.Web.Bo/project.json
@@ -1,7 +1,5 @@
 {
   "dependencies": {
-    "FindMe.Data": "1.0.0-*",
-    "FindMe.Data.Db": "1.0.0-*",
     "Microsoft.AspNetCore.Diagnostics": "1.1.0",
     "Microsoft.AspNetCore.Mvc": "1.1.0",
     "Microsoft.AspNetCore.Razor.Tools": {
@@ -27,7 +25,11 @@
     "Microsoft.EntityFrameworkCore.Tools.DotNet": "1.1.0-preview4-final",
     "Swapp.Data": "1.0.0-*",
     "Swapp.Data.Db": "1.0.0-*",
-    "Microsoft.EntityFrameworkCore.Design": "1.1.0"
+    "Microsoft.EntityFrameworkCore.Design": "1.1.0",
+    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.0.0",
+    "FindMe.Data": "1.0.0-*",
+    "FindMe.Data.Db": "1.0.0-*"
+    //"Microsoft.AspNet.Mvc.Abstractions": "6.0.0-rc1-final"
   },
 
   "tools": {
