--- a/FindMe.Web.Bo/appsettings.json
+++ b/FindMe.Web.Bo/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "MsSqlConnection": "Server=DAMIENPC;Database=FindMe.Db; persist security info=True;user id=sa;password=zx;MultipleActiveResultSets=True;App=NoteFlowApp",
     "MsSqlConnectionRL": "",
-    "MySqlConnection": "Server=localhost;Database=FindMe.Db;Uid=root;Pwd=badam",
+    "MySqlConnection": "server=localhost;user id=sa;password=badam;persistsecurityinfo=True;database=findeme_db",
     "MySqlConnectionRL": ""
   },
 
