--- a/FindMe.Web.Bo/project.json
+++ b/FindMe.Web.Bo/project.json
@@ -29,7 +29,9 @@
     "FindMe.Data": "1.0.0-*",
     "FindMe.Data.Db": "1.0.0-*",
     "MailKit": "1.10.1",
-    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.0"
+    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.0",
+    "FindMe.Data.Db.MsSql": "1.0.0-*",
+    "FindMe.Data.Db.MySql": "1.0.0-*"
   },
 
   "tools": {
