--- a/FindMe.Web.Bo/project.json
+++ b/FindMe.Web.Bo/project.json
@@ -31,7 +31,8 @@
     "MailKit": "1.10.1",
     "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.0",
     "FindMe.Data.Db.MsSql": "1.0.0-*",
-    "FindMe.Data.Db.MySql": "1.0.0-*"
+    "FindMe.Data.Db.MySql": "1.0.0-*",
+    "Microsoft.ApplicationInsights.AspNetCore": "1.0.2"
   },
 
   "tools": {
