--- a/FindMe.Web.Bo/appsettings.json
+++ b/FindMe.Web.Bo/appsettings.json
@@ -6,6 +6,12 @@
     "MySqlConnectionRL": ""
   },
 
+  "ManagerEmailAccount": {
+    "ServerName": "XXXXXXX",
+    "Email": "XXXXXXX",
+    "EmailPassword": "XXXXXXX"
+  },
+
   "App": {
     "CacheVersion": "1"
   },
