--- a/FindMe.Web.Bo/appsettings.json
+++ b/FindMe.Web.Bo/appsettings.json
@@ -16,6 +16,18 @@
     "CacheVersion": "1"
   },
 
+  "UrlConfigs": {
+    "development": {
+      "webSite": "https://swap.findme.mu/"
+    },
+    "staging": {
+      "webSite": "https://swap.findme.mu/"
+    },
+    "production": {
+      "webSite": "https://findme.mu/"
+    }
+  },
+
   "Languages": "en-us,en-gb,fr-fr",
 
   "Logging": {
