--- a/FindMe.Web.Bo/appsettings.json
+++ b/FindMe.Web.Bo/appsettings.json
@@ -28,6 +28,24 @@
     }
   },
 
+  "FtpAccess": {
+    "development": {
+      "host": "129.232.187.237",
+      "user": "swap",
+      "password": "WtHE1v'~=M2x"
+    },
+    "staging": {
+      "host": "129.232.187.237",
+      "user": "swap",
+      "password": "WtHE1v'~=M2x"
+    },
+    "production": {
+      "host": "129.232.187.237",
+      "user": "findme",
+      "password": "8cZ1ri9YkB"
+    }
+  },
+
   "Languages": "en-us,en-gb,fr-fr",
 
   "Logging": {
