--- a/FindMe.Web.Bo/appsettings.json
+++ b/FindMe.Web.Bo/appsettings.json
@@ -1,9 +1,13 @@
 ﻿{
   "ConnectionStrings": {
-    "MsSqlConnection": "Server=DAMIENPC;Database=FindMe.Db; persist security info=True;user id=sa;password=zx;MultipleActiveResultSets=True;App=NoteFlowApp",
-    "MsSqlConnectionRL": "",
-    "MySqlConnection": "server=localhost;user id=sa;password=badam;persistsecurityinfo=True;database=findeme_db",
-    "MySqlConnectionRL": ""
+    "staging": {
+      "MsSqlConnection": "Server=tcp:swapp-mssql-server.database.windows.net,1433;Initial Catalog=findme.db;Persist Security Info=False;User ID=swappadmin;Password=Hubydam.2016;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+      "MySqlConnection": "Server=129.232.187.237;Port=3306;Uid=swap;Pwd=WtHE1v'~=M2x;Database=swap;"
+    },
+    "production": {
+      "MsSqlConnection": "Server=tcp:swapp-mssql-server.database.windows.net,1433;Initial Catalog=findme.db;Persist Security Info=False;User ID=swappadmin;Password=Hubydam.2016;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+      "MySqlConnection": "Server=129.232.187.237;Port=3306;Uid=findme;Pwd=XoroGziqqDn30w;Database=findme_live;"
+    }
   },
 
   "ManagerEmailAccount": {
@@ -13,7 +17,10 @@
   },
 
   "App": {
-    "CacheVersion": "1"
+    "CacheVersion": "1",
+    "Publish": {
+      "Env": "Staging"
+    }
   },
 
   "UrlConfigs": {
