--- a/FindMe.Web.Bo/Properties/launchSettings.json
+++ b/FindMe.Web.Bo/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "launchBrowser": true,
       "environmentVariables": {
         "Migration__On": "false",
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Staging"
       }
     },
     "FindMe.Web.App": {
