--- a/FindMe.Web.Bo/appsettings.json
+++ b/FindMe.Web.Bo/appsettings.json
@@ -17,9 +17,9 @@
   },
 
   "App": {
-    "CacheVersion": "1",
+    "CacheVersion": "2",
     "Publish": {
-      "Env": "Staging"
+      "Env": "Production"
     }
   },
 
