--- a/FindMe.Web.Bo/appsettings.json
+++ b/FindMe.Web.Bo/appsettings.json
@@ -17,9 +17,9 @@
   },
 
   "App": {
-    "CacheVersion": "3",
+    "CacheVersion": "4",
     "Publish": {
-      "Env": "staging"
+      "Env": "Production"
     }
   },
 
