--- a/FindMe.Web.Bo/bundleconfig.json
+++ b/FindMe.Web.Bo/bundleconfig.json
@@ -290,5 +290,17 @@
     "inputFiles": [
       "wwwroot/css/app/exceptions.css"
     ]
+  },
+  {
+    "outputFileName": "wwwroot/js/app/services/listItemService.min.js",
+    "inputFiles": [
+      "wwwroot/js/app/services/listItemService.js"
+    ]
+  },
+  {
+    "outputFileName": "wwwroot/js/app/services/miscToolsService.min.js",
+    "inputFiles": [
+      "wwwroot/js/app/services/miscToolsService.js"
+    ]
   }
 ]
