--- a/FindMe.Web.Bo/appsettings.json
+++ b/FindMe.Web.Bo/appsettings.json
@@ -10,10 +10,12 @@
     }
   },
 
-  "ManagerEmailAccount": {
-    "ServerName": "XXXXXXX",
-    "Email": "XXXXXXX",
-    "EmailPassword": "XXXXXXX"
+  "MandrillEmailManagement": {
+    "apiKey": "SYa34gl3tLta4FD9d7Ck4A",
+    "noReplyEmail": "no-reply@findme.mu",
+    "host": "smtp.mandrillapp.com",
+    "port": "587",
+    "smtpUserName": "Mediatiz Ltd"
   },
 
   "App": {
