--- a/FindMe.Web.Bo/project.json
+++ b/FindMe.Web.Bo/project.json
@@ -36,7 +36,8 @@
     "CoreFtp": "1.3.4",
     "ImageSharp": "1.0.0-alpha7-00006",
     "CoreCompat.System.Drawing": "1.0.0-beta006",
-    "Mandrill.net": "4.0.0"
+    "Mandrill.net": "4.0.0",
+    "FindMe.Data.Resources": "1.0.0-*"
   },
 
   "tools": {
